# Bag-of-Words-SVM

./: CMakeCache.txt  CMakeLists.txt  Makefile  arch_run_bow.sh  cmake_install.cmake  default_predict  default_svm  default_trainer  info.txt  run.sh  samochody_run_bow.sh  sdefault_predict  svm  svm_old  trainer
include/: BagOfWords.h  Config.h  File.h  Group.h  Image.h  ImageGroup.h
src/: BagOfWords.cpp  File.cpp  Group.cpp  ImageGroup.cpp  image.cpp  main.cpp
